app/font/gramatica02/ACMulticapa02Parser.py
# Generated from ACMulticapa02.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ACMulticapa02Parser ( Parser ):

    grammarFileName = "ACMulticapa02.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'GRAMATICA:'", "'PASOS:'", "'DURACION ESTADOS'", 
                     "'{'", "'}'", "'CAPA'", "'CELDA'", "'BLOQUEADO'", "','", 
                     "':'", "'SUSCEPTIBLE'", "'EXPUESTO'", "'INFECTADO'", 
                     "'RECUPERADO'", "'MUERTO'", "'TRANSICIONES POR DURACION'", 
                     "'->'", "'PROBABILIDAD'", "'TRANSICIONES POR CELDA'", 
                     "'REGLA'", "'SI'", "'HAY'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STRING", "NUMBER", 
                      "WS", "OPERATOR" ]

    RULE_program = 0
    RULE_ignoredLines = 1
    RULE_grammarChoice = 2
    RULE_stepsChoice = 3
    RULE_durationStandard = 4
    RULE_durationState = 5
    RULE_layer = 6
    RULE_cell = 7
    RULE_diseaseStateSet = 8
    RULE_diseaseState = 9
    RULE_basicState = 10
    RULE_transitions = 11
    RULE_durationTransitions = 12
    RULE_durationTransitionRule = 13
    RULE_cellTransitions = 14
    RULE_cellTransitionRule = 15
    RULE_condition = 16
    RULE_comparison = 17

    ruleNames =  [ "program", "ignoredLines", "grammarChoice", "stepsChoice", 
                   "durationStandard", "durationState", "layer", "cell", 
                   "diseaseStateSet", "diseaseState", "basicState", "transitions", 
                   "durationTransitions", "durationTransitionRule", "cellTransitions", 
                   "cellTransitionRule", "condition", "comparison" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    STRING=23
    NUMBER=24
    WS=25
    OPERATOR=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ACMulticapa02Parser.EOF, 0)

        def ignoredLines(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.IgnoredLinesContext,0)


        def durationStandard(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.DurationStandardContext,0)


        def layer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.LayerContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.LayerContext,i)


        def transitions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.TransitionsContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.TransitionsContext,i)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ACMulticapa02Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 36
                self.ignoredLines()


            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 39
                self.durationStandard()


            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.layer()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==6):
                    break

            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16 or _la==19:
                self.state = 47
                self.transitions()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(ACMulticapa02Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IgnoredLinesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarChoice(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.GrammarChoiceContext,0)


        def stepsChoice(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.StepsChoiceContext,0)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_ignoredLines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnoredLines" ):
                listener.enterIgnoredLines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnoredLines" ):
                listener.exitIgnoredLines(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIgnoredLines" ):
                return visitor.visitIgnoredLines(self)
            else:
                return visitor.visitChildren(self)




    def ignoredLines(self):

        localctx = ACMulticapa02Parser.IgnoredLinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ignoredLines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.grammarChoice()
            self.state = 56
            self.stepsChoice()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarChoiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa02Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_grammarChoice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarChoice" ):
                listener.enterGrammarChoice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarChoice" ):
                listener.exitGrammarChoice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarChoice" ):
                return visitor.visitGrammarChoice(self)
            else:
                return visitor.visitChildren(self)




    def grammarChoice(self):

        localctx = ACMulticapa02Parser.GrammarChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_grammarChoice)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ACMulticapa02Parser.T__0)
            self.state = 59
            self.match(ACMulticapa02Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepsChoiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa02Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_stepsChoice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStepsChoice" ):
                listener.enterStepsChoice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStepsChoice" ):
                listener.exitStepsChoice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStepsChoice" ):
                return visitor.visitStepsChoice(self)
            else:
                return visitor.visitChildren(self)




    def stepsChoice(self):

        localctx = ACMulticapa02Parser.StepsChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stepsChoice)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ACMulticapa02Parser.T__1)
            self.state = 62
            self.match(ACMulticapa02Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationStandardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def durationState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.DurationStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.DurationStateContext,i)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_durationStandard

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDurationStandard" ):
                listener.enterDurationStandard(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDurationStandard" ):
                listener.exitDurationStandard(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationStandard" ):
                return visitor.visitDurationStandard(self)
            else:
                return visitor.visitChildren(self)




    def durationStandard(self):

        localctx = ACMulticapa02Parser.DurationStandardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_durationStandard)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(ACMulticapa02Parser.T__2)
            self.state = 65
            self.match(ACMulticapa02Parser.T__3)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.durationState()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0)):
                    break

            self.state = 71
            self.match(ACMulticapa02Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicState(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.BasicStateContext,0)


        def NUMBER(self):
            return self.getToken(ACMulticapa02Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_durationState

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDurationState" ):
                listener.enterDurationState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDurationState" ):
                listener.exitDurationState(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationState" ):
                return visitor.visitDurationState(self)
            else:
                return visitor.visitChildren(self)




    def durationState(self):

        localctx = ACMulticapa02Parser.DurationStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_durationState)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.basicState()
            self.state = 74
            self.match(ACMulticapa02Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa02Parser.NUMBER, 0)

        def cell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.CellContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.CellContext,i)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_layer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer" ):
                listener.enterLayer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer" ):
                listener.exitLayer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayer" ):
                return visitor.visitLayer(self)
            else:
                return visitor.visitChildren(self)




    def layer(self):

        localctx = ACMulticapa02Parser.LayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_layer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(ACMulticapa02Parser.T__5)
            self.state = 77
            self.match(ACMulticapa02Parser.NUMBER)
            self.state = 78
            self.match(ACMulticapa02Parser.T__3)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.cell()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==7):
                    break

            self.state = 84
            self.match(ACMulticapa02Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa02Parser.NUMBER, 0)

        def diseaseStateSet(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.DiseaseStateSetContext,0)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_cell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCell" ):
                listener.enterCell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCell" ):
                listener.exitCell(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCell" ):
                return visitor.visitCell(self)
            else:
                return visitor.visitChildren(self)




    def cell(self):

        localctx = ACMulticapa02Parser.CellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cell)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(ACMulticapa02Parser.T__6)
            self.state = 87
            self.match(ACMulticapa02Parser.NUMBER)
            self.state = 88
            self.diseaseStateSet()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 89
                self.match(ACMulticapa02Parser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiseaseStateSetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def diseaseState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.DiseaseStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.DiseaseStateContext,i)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_diseaseStateSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiseaseStateSet" ):
                listener.enterDiseaseStateSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiseaseStateSet" ):
                listener.exitDiseaseStateSet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiseaseStateSet" ):
                return visitor.visitDiseaseStateSet(self)
            else:
                return visitor.visitChildren(self)




    def diseaseStateSet(self):

        localctx = ACMulticapa02Parser.DiseaseStateSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_diseaseStateSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(ACMulticapa02Parser.T__3)
            self.state = 93
            self.diseaseState()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 94
                self.match(ACMulticapa02Parser.T__8)
                self.state = 95
                self.diseaseState()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(ACMulticapa02Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiseaseStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicState(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.BasicStateContext,0)


        def NUMBER(self):
            return self.getToken(ACMulticapa02Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_diseaseState

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiseaseState" ):
                listener.enterDiseaseState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiseaseState" ):
                listener.exitDiseaseState(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiseaseState" ):
                return visitor.visitDiseaseState(self)
            else:
                return visitor.visitChildren(self)




    def diseaseState(self):

        localctx = ACMulticapa02Parser.DiseaseStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_diseaseState)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.basicState()
            self.state = 104
            self.match(ACMulticapa02Parser.T__9)
            self.state = 105
            self.match(ACMulticapa02Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasicStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_basicState

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasicState" ):
                listener.enterBasicState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasicState" ):
                listener.exitBasicState(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasicState" ):
                return visitor.visitBasicState(self)
            else:
                return visitor.visitChildren(self)




    def basicState(self):

        localctx = ACMulticapa02Parser.BasicStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_basicState)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def durationTransitions(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.DurationTransitionsContext,0)


        def cellTransitions(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.CellTransitionsContext,0)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_transitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransitions" ):
                listener.enterTransitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransitions" ):
                listener.exitTransitions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransitions" ):
                return visitor.visitTransitions(self)
            else:
                return visitor.visitChildren(self)




    def transitions(self):

        localctx = ACMulticapa02Parser.TransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_transitions)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.durationTransitions()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.cellTransitions()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationTransitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def durationTransitionRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.DurationTransitionRuleContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.DurationTransitionRuleContext,i)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_durationTransitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDurationTransitions" ):
                listener.enterDurationTransitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDurationTransitions" ):
                listener.exitDurationTransitions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationTransitions" ):
                return visitor.visitDurationTransitions(self)
            else:
                return visitor.visitChildren(self)




    def durationTransitions(self):

        localctx = ACMulticapa02Parser.DurationTransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_durationTransitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(ACMulticapa02Parser.T__15)
            self.state = 114
            self.match(ACMulticapa02Parser.T__3)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.durationTransitionRule()
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0)):
                    break

            self.state = 120
            self.match(ACMulticapa02Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationTransitionRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.BasicStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.BasicStateContext,i)


        def NUMBER(self):
            return self.getToken(ACMulticapa02Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_durationTransitionRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDurationTransitionRule" ):
                listener.enterDurationTransitionRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDurationTransitionRule" ):
                listener.exitDurationTransitionRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationTransitionRule" ):
                return visitor.visitDurationTransitionRule(self)
            else:
                return visitor.visitChildren(self)




    def durationTransitionRule(self):

        localctx = ACMulticapa02Parser.DurationTransitionRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_durationTransitionRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.basicState()
            self.state = 123
            self.match(ACMulticapa02Parser.T__16)
            self.state = 124
            self.basicState()
            self.state = 125
            self.match(ACMulticapa02Parser.T__17)
            self.state = 126
            self.match(ACMulticapa02Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellTransitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cellTransitionRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.CellTransitionRuleContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.CellTransitionRuleContext,i)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_cellTransitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCellTransitions" ):
                listener.enterCellTransitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCellTransitions" ):
                listener.exitCellTransitions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCellTransitions" ):
                return visitor.visitCellTransitions(self)
            else:
                return visitor.visitChildren(self)




    def cellTransitions(self):

        localctx = ACMulticapa02Parser.CellTransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_cellTransitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(ACMulticapa02Parser.T__18)
            self.state = 129
            self.match(ACMulticapa02Parser.T__3)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.cellTransitionRule()
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 135
            self.match(ACMulticapa02Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellTransitionRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa02Parser.BasicStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapa02Parser.BasicStateContext,i)


        def condition(self):
            return self.getTypedRuleContext(ACMulticapa02Parser.ConditionContext,0)


        def getRuleIndex(self):
            return ACMulticapa02Parser.RULE_cellTransitionRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCellTransitionRule" ):
                listener.enterCellTransitionRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCellTransitionRule" ):
                listener.exitCellTransitionRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCellTransitionRule" ):
                return visitor.visitCellTransitionRule(self)
            else:
                return visitor.visitChildren(self)




    def cellTransitionRule(self):

        localctx = ACMulticapa02Parser.CellTransitionRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_cellTransitionRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(ACMulticapa02Parser.T__19)
            self.state = 138
            self.basicState()
            self.state = 139
            self.match(ACMulticapa02Parser.T__16)
            self.state = 140
            self.basicState()
            self.state = 141
            self.match(ACMulticapa02Parser.T__20)
            self.state = 142
            self.match(ACMulticapa02Parser.T__21)
            self.state = 143
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

